MDEV-10587 sql_mode=ORACLE: User defined exceptions